# dupcfinder

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  main.cpp
config/: CPM.cmake  revision.cmake
doc/: CMakeLists.txt
scripts/: compile_commands.sh
src/: CMakeLists.txt  table.cpp  table.hpp  versioning.hpp
src/utils/: command_line.cpp  command_line.hpp  sha.cpp  sha.hpp
